2004-06-13  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/Deployment/ScriptDeploy.cs: string fix

2004-06-11  Todd Berman  <tberman@sevenl.net>

	* Services/SystemAssemblyService.cs: Dont scan the same path twice.

2004-06-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: Set the project of
	  newly added files.
	* Services/ParserService/DefaultParserService.cs: Generate and cache code
	  completion databases for opened files that do not belong to any project.
	* Services/ParserService/CodeCompletionDatabase.cs: Added Clear method.
	  Made Write() virtual. 
	  Added new SimpleCodeCompletionDatabase, for storing information for a
	  single file.
	* Internal/Project/Project/AbstractProject.cs: Ignore members with the
	  xml name set to null.
	* Internal/Project/Project/ProjectFile.cs: Added project filed. Notify
	  the project when the file name changes.
	* Internal/Project/Project/Collections/ProjectFileCollection.cs: assign
	  the project to the files in the collection.

2004-06-06  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/CommonAboutDialog.cs: make the scrollbox not expand
	fixes bug #59652

2004-06-02  Todd Berman  <tberman@sevenl.net>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs: call new func.
	* Gui/Dialogs/NewFileDialog.cs: remove dead code
	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs: add function that
	worksaround the gtk+ 2.4 regression workaround.

2004-06-02  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: This is actually how translator
	credits are supposed to work. Update the po and go ahead and
	translate the string "translator_credits" to include what you want
	it to include. It will then show up properly.

2004-06-02  Todd Berman  <tberman@sevenl.net>

	* MonoDevelop.Base.prjx: fixed ICSharpCode.SharpZipLib reference and
	added new file.
	* Gui/Dialogs/CombineConfiguration/CombineBuildOptions.cs: new dialog